--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: actions/upload-artifacts@main
+      - uses: actions/upload-artifact@main
         with:
           name: webpack artifacts
           path: public/
@@ -31,10 +31,10 @@ jobs:
         node-version: [12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/download-artifacts@main
+      - uses: actions/download-artifact@main
         with:
           name: webpack artifacts
-          path: publi/
+          path: public
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
